FIX: sidebar-overflow-y, scroll

--- a/_sass/_common/components/sidebar/sidebar.scss
+++ b/_sass/_common/components/sidebar/sidebar.scss
@@ -10,6 +10,8 @@
   background: $black-deep;
   -webkit-transform: translateZ(0); // http://stackoverflow.com/questions/17079857/position-fixed-broken-in-chrome-with-flash-behind
 
+  overflow-y: scroll;
+
   a {
     color: $grey-dark;
     border-bottom-color: $black-light;
